--- a/2 Entities.html
+++ b/2 Entities.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Entities</title>
 </head>
 <body>
+  <a href="./3 Hyperlinks.html">
+    Home Page
+  </a>
   <p>
     You mean &lt;the World&gt; to me!
   </p>
