--- a/2 Entities.html
+++ b/2 Entities.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="./3 Hyperlinks.html">
+    Home Page
+  </a>
   <p>
     You mean &lt;the World&gt; to me!
   </p>
