--- a/18 Gradient.html
+++ b/18 Gradient.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
+  <title>Gradient</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/18.css">
 </head>
 <body>
   <div class="box"></div>
+  <div class="box1"></div>
+  <div class="box2"></div>
 </body>
 </html>
