--- a/21 TABLE.html
+++ b/21 TABLE.html
@@ -11,9 +11,9 @@
   <table>
     <thead>
       <tr>
-        <td>Country</td>
-        <td>OrderID</td>
-        <td>Order Amount</td>
+        <th>Country</th>
+        <th>OrderID</th>
+        <th>Order Amount</th>
       </tr>
     </thead>
     <tbody>
@@ -40,8 +40,8 @@
     </tbody>
     <tfoot>
       <tr>
-        <td colspan="2">Total</td>
-        <td>$5,000</td>
+        <th colspan="2">Total</th>
+        <th>$5,000</th>
       </tr>
     </tfoot>
   </table>
